[gd_scene load_steps=14 format=2]

[ext_resource path="res://Objects/MailBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Level00.gd" type="Script" id=2]
[ext_resource path="res://Objects/PaperBoy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/JumboTron.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/ExtraPapers.tscn" type="PackedScene" id=5]
[ext_resource path="res://Objects/ExtraPaperSpawner.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/In_Game_UI.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/papercount.png" type="Texture" id=8]
[ext_resource path="res://UI/minimap/playermarker.png" type="Texture" id=9]
[ext_resource path="res://UI/minimap/undelivered_paperbox_marker.png" type="Texture" id=10]
[ext_resource path="res://UI/minimap/minimap_background.png" type="Texture" id=11]
[ext_resource path="res://MiniMap.gd" type="Script" id=13]

[sub_resource type="Theme" id=1]

[node name="Level00" type="Node"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PaperBoy" parent="." instance=ExtResource( 3 )]
position = Vector2( 83.969, 47.553 )
scale = Vector2( 3, 3 )
SPEED = 88

[node name="CameraFollow" parent="PaperBoy" index="4"]
remote_path = NodePath("../../Camera")

[node name="MailBox" parent="." groups=[
"minimap_objects",
] instance=ExtResource( 1 )]
position = Vector2( 24.3963, 85.9256 )
scale = Vector2( 3, 3 )

[node name="MailBox2" parent="." groups=[
"minimap_objects",
] instance=ExtResource( 1 )]
position = Vector2( 160, 85.9256 )
scale = Vector2( 3, 3 )

[node name="MailBox3" parent="." groups=[
"minimap_objects",
] instance=ExtResource( 1 )]
position = Vector2( 160, 0 )
scale = Vector2( 3, 3 )

[node name="MailBox4" parent="." groups=[
"minimap_objects",
] instance=ExtResource( 1 )]
position = Vector2( 160, -76.5031 )
scale = Vector2( -3, 3 )
isFlipped = true

[node name="MailBox5" parent="." groups=[
"minimap_objects",
] instance=ExtResource( 1 )]
position = Vector2( 25.3244, -85.2682 )
scale = Vector2( -3, 3 )
isFlipped = true

[node name="MailBox6" parent="." groups=[
"minimap_objects",
] instance=ExtResource( 1 )]
position = Vector2( 25.3244, -7.77273 )
scale = Vector2( -3, 3 )
isFlipped = true

[node name="MailBox7" parent="." groups=[
"minimap_objects",
] instance=ExtResource( 1 )]
position = Vector2( 59.869, -173.327 )
scale = Vector2( -3, 3 )
isFlipped = true

[node name="MailBox9" parent="." groups=[
"minimap_objects",
] instance=ExtResource( 1 )]
position = Vector2( 189.637, -252.226 )
scale = Vector2( -3, 3 )
isFlipped = true

[node name="MailBox10" parent="." groups=[
"minimap_objects",
] instance=ExtResource( 1 )]
position = Vector2( 380.656, -270.913 )
scale = Vector2( -3, 3 )
isFlipped = true

[node name="MailBox17" parent="." groups=[
"minimap_objects",
] instance=ExtResource( 1 )]
position = Vector2( 393.432, -380.422 )
scale = Vector2( -3, 3 )
isFlipped = true

[node name="MailBox11" parent="." groups=[
"minimap_objects",
] instance=ExtResource( 1 )]
position = Vector2( 386.885, -113.115 )
scale = Vector2( -3, 3 )
isFlipped = true

[node name="MailBox12" parent="." groups=[
"minimap_objects",
] instance=ExtResource( 1 )]
position = Vector2( 522.881, -116.23 )
scale = Vector2( -3, 3 )
isFlipped = true

[node name="MailBox13" parent="." groups=[
"minimap_objects",
] instance=ExtResource( 1 )]
position = Vector2( 657.84, -117.268 )
scale = Vector2( -3, 3 )
isFlipped = true

[node name="MailBox14" parent="." groups=[
"minimap_objects",
] instance=ExtResource( 1 )]
position = Vector2( 774.112, -117.268 )
scale = Vector2( -3, 3 )
isFlipped = true

[node name="MailBox15" parent="." groups=[
"minimap_objects",
] instance=ExtResource( 1 )]
position = Vector2( 656.802, -275.066 )
scale = Vector2( -3, 3 )
isFlipped = true

[node name="MailBox18" parent="." groups=[
"minimap_objects",
] instance=ExtResource( 1 )]
position = Vector2( 638.551, -379.099 )
scale = Vector2( -3, 3 )
isFlipped = true

[node name="MailBox19" parent="." groups=[
"minimap_objects",
] instance=ExtResource( 1 )]
position = Vector2( 640.909, -499.395 )
scale = Vector2( -3, 3 )
isFlipped = true

[node name="MailBox20" parent="." groups=[
"minimap_objects",
] instance=ExtResource( 1 )]
position = Vector2( 405.035, -497.036 )
scale = Vector2( -3, 3 )
isFlipped = true

[node name="MailBox16" parent="." groups=[
"minimap_objects",
] instance=ExtResource( 1 )]
position = Vector2( 768.922, -274.027 )
scale = Vector2( -3, 3 )
isFlipped = true

[node name="MailBox8" parent="." groups=[
"minimap_objects",
] instance=ExtResource( 1 )]
position = Vector2( 270.818, -118.143 )
scale = Vector2( -3, 3 )
isFlipped = true

[node name="ExtraPapers" parent="." groups=[
"extrapapers",
] instance=ExtResource( 5 )]
position = Vector2( 96.6969, 83.4387 )

[node name="ExtraPapers2" parent="." groups=[
"extrapapers",
] instance=ExtResource( 5 )]
position = Vector2( 197.99, -144.586 )

[node name="ExtraPapers3" parent="." groups=[
"extrapapers",
] instance=ExtResource( 5 )]
position = Vector2( 439.769, -156.928 )

[node name="ExtraPapers4" parent="." groups=[
"extrapapers",
] instance=ExtResource( 5 )]
position = Vector2( 444.269, -381.849 )

[node name="ExtraPapers5" parent="." groups=[
"extrapapers",
] instance=ExtResource( 5 )]
position = Vector2( 752.904, -156.928 )

[node name="ExtraPaperSpawner" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 83.4853, 46.2981 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 83.969, 23.553 )
current = true
zoom = Vector2( 1.5, 1.5 )
smoothing_enabled = true
smoothing_speed = 20.0

[node name="UI" parent="." instance=ExtResource( 7 )]

[node name="JumboTron" parent="UI" instance=ExtResource( 4 )]

[node name="MiniMap" type="MarginContainer" parent="UI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -21.8463
margin_top = -21.6385
margin_right = 60.1537
margin_bottom = 60.3615
rect_scale = Vector2( 0.25, 0.25 )
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}
player = NodePath("../../PaperBoy")

[node name="Frame" type="NinePatchRect" parent="UI/MiniMap"]
margin_left = 5.0
margin_top = 5.0
margin_right = 77.0
margin_bottom = 77.0
texture = ExtResource( 11 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="MarginContainer" type="MarginContainer" parent="UI/MiniMap"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 5.0
margin_top = 5.0
margin_right = 77.0
margin_bottom = 77.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="Grid" type="TextureRect" parent="UI/MiniMap/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 68.0
margin_bottom = 68.0
texture = ExtResource( 11 )
stretch_mode = 2

[node name="playermarker" type="Sprite" parent="UI/MiniMap/MarginContainer/Grid"]
position = Vector2( 32, 32 )
texture = ExtResource( 9 )

[node name="boxmarker" type="Sprite" parent="UI/MiniMap/MarginContainer/Grid"]
visible = false
position = Vector2( 32, 32 )
texture = ExtResource( 10 )

[node name="numpaperdisplay" type="RichTextLabel" parent="UI" groups=[
"numpaperdisplay",
]]
modulate = Color( 0.729412, 0.729412, 0.729412, 1 )
margin_left = 35.5835
margin_top = 75.6318
margin_right = 128.583
margin_bottom = 111.632
theme = SubResource( 1 )
text = "_"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="papercount" type="Sprite" parent="UI"]
position = Vector2( 21.8672, 83.4387 )
scale = Vector2( 0.118421, 0.118421 )
texture = ExtResource( 8 )
[connection signal="out_of_newspapers" from="PaperBoy" to="." method="_on_PaperBoy_out_of_newspapers"]
[connection signal="shot_newspaper" from="PaperBoy" to="." method="_on_PaperBoy_shot_newspaper"]
[connection signal="removed" from="MailBox" to="UI/MiniMap" method="_on_MailBox_removed"]
[connection signal="removed" from="MailBox2" to="UI/MiniMap" method="_on_MailBox_removed"]
[connection signal="removed" from="MailBox3" to="UI/MiniMap" method="_on_MailBox_removed"]
[connection signal="removed" from="MailBox4" to="UI/MiniMap" method="_on_MailBox_removed"]
[connection signal="removed" from="MailBox5" to="UI/MiniMap" method="_on_MailBox_removed"]
[connection signal="removed" from="MailBox6" to="UI/MiniMap" method="_on_MailBox_removed"]
[connection signal="removed" from="MailBox7" to="UI/MiniMap" method="_on_MailBox_removed"]
[connection signal="removed" from="MailBox9" to="UI/MiniMap" method="_on_MailBox_removed"]
[connection signal="removed" from="MailBox10" to="UI/MiniMap" method="_on_MailBox_removed"]
[connection signal="removed" from="MailBox17" to="UI/MiniMap" method="_on_MailBox_removed"]
[connection signal="removed" from="MailBox11" to="UI/MiniMap" method="_on_MailBox_removed"]
[connection signal="removed" from="MailBox12" to="UI/MiniMap" method="_on_MailBox_removed"]
[connection signal="removed" from="MailBox13" to="UI/MiniMap" method="_on_MailBox_removed"]
[connection signal="removed" from="MailBox14" to="UI/MiniMap" method="_on_MailBox_removed"]
[connection signal="removed" from="MailBox15" to="UI/MiniMap" method="_on_MailBox_removed"]
[connection signal="removed" from="MailBox18" to="UI/MiniMap" method="_on_MailBox_removed"]
[connection signal="removed" from="MailBox19" to="UI/MiniMap" method="_on_MailBox_removed"]
[connection signal="removed" from="MailBox20" to="UI/MiniMap" method="_on_MailBox_removed"]
[connection signal="removed" from="MailBox16" to="UI/MiniMap" method="_on_MailBox_removed"]
[connection signal="removed" from="MailBox8" to="UI/MiniMap" method="_on_MailBox_removed"]
[connection signal="gui_input" from="UI/MiniMap" to="." method="_on_MiniMap_gui_input"]

[editable path="PaperBoy"]

[editable path="ExtraPaperSpawner"]
